# Logos_Agency

./: .env.example  .gitignore  2fc313d6.csv  97e1ca82.csv  AUTOMATION_MANIFEST.md  CLAUDE.md  Dockerfile  GOVERNANCE.md  Home.tsx  LICENSE  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  The_Logos_Agency__Myth-to-Market_Architecture.docx  The_Logos_Agency__Myth-to-Market_Architecture.md  benchmark.sh  benchmarks_vs_alternatives_test.go  ci_workflow_for_manual_upload.yml  docker-compose.yml  go.mod  go.sum  main.go  manus_config.json.example  package-lock.json  package.json  pasted_content_2_1.txt  pasted_content_3.txt  pasted_content_4.txt  scanner_test.go  server.go  server_test.go  todo.docx  todo.md  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
CODEx/: SCROLL_001_heuristic_scanner.md  SCROLL_002_repo_onboarding.md  SCROLL_003_performance_bench.md  codex_payload.json
GitHub workflows/: tests.yml
benchmarks/: benchmark_pandas_comparison.py  compare_with_pandas.md  gradient_sync_rdma.py
config/: ucx_rdma.conf
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONVERSATION-AUDIT.md  GETTING_STARTED.md  MANUS_INTEGRATION.md  MONETIZATION.md  ONBOARDING_CHECKLIST.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  ROADMAP.md  SCANNER_TEST_MATRIX.md  STATISTICAL_INFERENCE.md
engine/: effect_size.go  simd_fastpath.go  stat_inference.go  stat_inference_complete.go
k8s/: hpa-fractal-aware.yaml
orchestrator/: config.json  memory_core_stub.py  mind_nexus_stub.py  supremehead.py
scripts/: ship.sh
services/orchestrator/: Dockerfile  pyproject.toml  requirements.txt  server.py  supremehead.py
services/orchestrator/tests/: test_server.py  test_supremehead.py
skipcalls/: .env.example  app.py  requirements.txt
(+55 files in other folders)
