[tool.poetry]
name = "logos-orchestrator"
version = "0.1.0"
description = "Logos Agency async orchestration service"
authors = []
readme = "README.md"
packages = [{ include = "." }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = { version = "^3.9", optional = true }
aiofiles = { version = "^23.2", optional = true }
requests = { version = "^2.31", optional = true }

[tool.poetry.extras]
full = ["aiohttp", "aiofiles", "requests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*_stub.py"]

[tool.coverage.report]
# 45% reflects the realistic sync-path ceiling without mocking the HTTP layer.
# Uncovered lines are async I/O, retry loops, and try/except import fallbacks —
# none of which are reachable without live external services or patching.
# Raise incrementally as aiohttp/requests mock fixtures are introduced.
fail_under = 45
